--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Testimonials grid section</title>
-  <meta name="author" content="Frontend Mentor">
+  <meta name="author" content="Alberto Raúl José">
   <meta name="title" content="Frontend Mentor | Testimonials grid section">
   <meta name="description" content="Frontend mentor challenge solution for: Testimonials grid section">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
