--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Testimonials grid section</title>
   <meta name="author" content="Alberto Raúl José">
   <meta name="title" content="Frontend Mentor | Testimonials grid section">
-  <meta name="description" content="Frontend mentor challenge solution for: Testimonials grid section">
+  <meta name="description" content="This is a solution to the Testimonials grid section challenge on Frontend Mentor. Frontend Mentor challenges help you improve your coding skills by building realistic projects.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
